new file:   LICENCE.md new file:   naturedarktheme-0.0.1.vsix modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "naturedarktheme",
   "displayName": "NatureDarkTheme",
+  "publisher": "Hashibutogarasu",
   "description": "My custom Theme",
   "version": "0.0.1",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.78.0"
   },
